base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-deployment
  labels:
    app: demo-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
      - name: demo-web
        image: webbutvecklinghelsingborg/gitops:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-login
