base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-ingress
  namespace: apps
spec:
  rules:
  - host: demo-web.test
    http:
      paths:
      - backend:
          service:
            name: demo-web-service
            port:
              number: 80
        path: /
        pathType: Prefix
